--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -287,6 +287,7 @@ li a:hover {
     padding: 10px 50px 10px 50px;
     font-size: 20px;
     margin: 10px 0 10px 0;
+    border: 1px solid orange;
 }
 .button-sunshine-outline{
     background: none;
