--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -25,40 +25,42 @@ header{
 }
 /*navigation area*/
 ul {
-    margin-top: 15px;
-    padding-left: 50px;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
 
 li {
-    float: right;
+    margin-top: 20px;
+    float: left;
 }
 
 li a {
     display: block;
+    font-size:18px;
     color: white;
-    font-size:15px;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a.active{
-    background-color: #111;
-}
+
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
-    border-left: 2px solid orange;
+}
+li:last-child {
+    float: right;
+    border-radius: 3px;
+    border: 2px solid #f1f1f1;
 }
 /* user area*/
 .user-area{
-    padding-left:50px;
+    padding-left:20px;
 }
 .user-area>img{
     width:80px;
     height:80px;
-
     border-radius: 50%;
 }
 /**user dashboard area*/
@@ -73,12 +75,18 @@ li a:hover {
     height:150px;
     border-radius: 50%;
 }
+.image-profile{
+    width:150px;
+    height:150px;
+    border-radius: 50%;
+    margin-left: 100px;
+}
 .image-circle-2{
     padding-top:5px;
     width:70px;
     height:70px;
     border-radius: 50%;
-    float:right;
+    float:none;
 }
 .image-circle-3{
     width:70px;
@@ -111,6 +119,11 @@ li a:hover {
     background-repeat:no-repeat;
     background-size:cover;
 }
+/* site logo*/
+.site-logo{
+    padding-left:20%;
+    margin-bottom:5px;
+}
 /* body-section*/
 .body-section{
     padding:0px;
@@ -128,10 +141,10 @@ li a:hover {
 
 }
 .form-area-section{
-    margin-top: 100px;
-    margin-bottom:100px;
+    margin-top: 20%;
+    margin-bottom:20%;
     background: grey;
-    padding:100px 50px 100px 50px;
+    padding:50px 50px 100px 50px;
     opacity:0.8;
 }
 .form-control-order{
@@ -284,6 +297,7 @@ li a:hover {
 /* button elements styling*/
 .button-white{
     background:orange;
+    color:white;
     padding: 10px 50px 10px 50px;
     font-size: 20px;
     margin: 10px 0 10px 0;
@@ -377,23 +391,27 @@ li a:hover {
     background-color: #f1f1f1;
 }
 /* modal boxes */
+/* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
+
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
 }
 
 /* The Close Button */
@@ -409,4 +427,26 @@ li a:hover {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+/* Close button on hover */
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
 }
